# LeadGenerator

./: Dockerfile  cloudbuild.yaml  package-lock.json  package.json
.compare_20260312_202102/v3/kalk_V3-master/: .gitignore  README.md  SEMANTIC_DIGITAL_TWIN.md  SKILLS.md  check_offer.py  excel_out.txt  gemini.md  pyproject.toml  supabase_reset_log.txt  supabase_start_log.txt  test_frontend.py  tmp_check_fk.py
.compare_20260312_202102/v3/kalk_V3-master/backend/: _fix_db.py  apply_sql.py  astra.py  backend_logs.txt  backfill_card_summary.py  cennik_klasy.txt  check_add_column.py  check_all.py  check_audi.py  check_audi_q8.py  check_bmw_error.py  check_class_mapping.py  check_discounts.py  check_ins_params.py  check_insurance_db.py  check_kamiq.py  check_kamiq_data.py  check_params.py  check_schema.py  check_skoda.py  check_status_bmw.py  check_stuck.py  check_tables.py  check_view.py  check_viewdef.py  combo_test.py  create_engines.sql  create_rabaty.sql  create_tabela_opon.py  create_tabela_rabaty.sql  debug_pipeline.py  debug_terramar.py  dp_recorder.py  dummy.py  error_log.txt  fetch_and_test.py  fetch_latest_vehicle.py  fetch_result.py  fix_stuck.py  fix_stuck_all.py  (+78 more)
.compare_20260312_202102/v3/kalk_V3-master/frontend/: check-errors.mjs  diff.txt  extract.py  index.html  (+3 more)
backend/: .dockerignore  .env  Dockerfile  aleo_dump.html  check_leads_simple.py  conftest.py  debug_bk.py  debug_gunb.py  debug_krs.py  debug_scores.py  env.yaml  krs_pobierz_dump.html  owg_nowosci.html  pyproject.toml  rejestr_dump.html  rejestr_html.html  rejestr_nowe.html  requirements.txt  temp.json  test.py  test2.py  test_ez.py  test_output.txt  test_output_utf8.txt  test_rejestr.py  test_ted_api.py  tmp_debug_krs.py
backend/scripts/: clean_google_news.py  send_daily_notifications.py
backend/src/: api.py  main.py
backend/src/core/: config.py  profiles.py  supabase.py
backend/src/extractors/: enricher_llm.py  enrichment.py  llm.py
backend/src/scrapers/: baza_konkurencyjnosci.py  ezamowienia_bzp.py  google.py  google_jobs.py  gunb.py  krs.py  krs_api.py  krs_new_companies.py  pracuj.py  ted_gddkia.py
backend/src/services/: email_service.py  enrichment_service.py  osint_service.py  rejestr_io.py
backend/tests/: test_baza_konkurencyjnosci.py  test_enrichment_new.py  test_gunb.py  test_krs_api_manual.py  test_krs_new_companies.py  test_llm.py  test_ted_gddkia.py
(+280 files in other folders)
