[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "promanczak-hub",email = "p.romanczak@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-genai (>=1.66.0,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
    "ddgs (>=9.11.3,<10.0.0)",
    "tavily-python (>=0.7.23,<0.8.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "anthropic (>=0.92.0,<0.93.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
