[project]
name = "kalk-backend"
version = "0.1.0"
description = "Kalkulator LTR V2 Backend"
authors = [
    {name = "Antigravity"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "google-genai (>=1.64.0,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "playwright-stealth (>=2.0.2,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "drissionpage (>=4.1.1.2,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
